solved trouble run script